# haskell-word2vec

./: .gitignore  README.md  haskell-word2vec.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
