name:                haskell-word2vec
version:             0.1.0.0
synopsis:            A haskell implementation of word2vec
description:         Please see README.md
homepage:            https://github.com/pechersky/haskell-word2vec#readme
license:             GPL
license-file:        LICENSE
author:              Yakov Pechersky
copyright:           2016 Yakov Pechersky
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.8 && < 5
                     , containers >= 0.5.8.1
                     , text >= 1.2
                     , logger >= 0.1.0.2
  default-language:    Haskell2010

executable haskell-word2vec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-word2vec	 
                     , transformers >= 0.4.3
                     , conduit >= 1.2.8
                     , conduit-extra >= 1.1.13.3
                     , zip-conduit >= 0.2.2.2
                     , hakyll >= 4.8.3.1
                     , aeson-pretty < 0.8
                     , text
                     , logger >= 0.1.0.2
  default-language:    Haskell2010

test-suite haskell-word2vec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-word2vec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pechersky/haskell-word2vec
